# CppUtils

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  exec.sh
utils/: CMakeLists.txt
utils/include/utils/: utils.hpp
utils/src/: env.cpp  env.hpp  environment.cpp  environment.hpp  exponential_filter.cpp  exponential_filter.hpp  kalman.cpp  kalman.hpp  kalmann.cpp  kalmann.hpp  maths.cpp  maths.hpp  stoppable_thread.cpp  stoppable_thread.hpp  waiter.cpp  waiter.hpp
utils/test/: CMakeLists.txt
utils/test/src/: test.cpp
